--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-@import '@rainbow-me/rainbowkit/styles.css';
+@import "@rainbow-me/rainbowkit/styles.css";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -10,6 +10,9 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-poppins: var(--font-poppins);
+  --font-roboto: var(--font-roboto);
+  --font-inter: var(--font-inter);
+  --font-satoshi: var(--font-satoshi);
 
   --color-primary: var(--primary);
   --color-primary-foreground: var(--primary-foreground);
