--- a/app/globals.css
+++ b/app/globals.css
@@ -114,6 +114,10 @@
   --ring: #d4d4d8;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 @layer base {
   * {
     @apply border-border;
@@ -121,6 +125,7 @@
 
   body {
     @apply bg-background text-foreground;
+    scroll-behavior: smooth;
   }
 }
 
@@ -133,8 +138,6 @@
 .scrollbar-hide::-webkit-scrollbar {
   display: none !important;
 }
-
-
 
 .notification-scrollbar::-webkit-scrollbar {
   width: 1px; /* thin scrollbar */
